--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,10 @@ services:
     build: ${APACHE_DOCUMENT_ROOT}
     restart: unless-stopped
     working_dir: ${APACHE_DOCUMENT_ROOT}
+    environment:
+    - APACHE_DOCUMENT_ROOT:/home/site/wwwroot/
+    - IMAGE_NAME:restoringpride
+    - APPLICATION_ROOT:/home/
     ports:
       - "80:8081"
     volumes:
