--- a/.github/workflows/build-and-push-docker-image-to-azure.yml
+++ b/.github/workflows/build-and-push-docker-image-to-azure.yml
@@ -8,45 +8,52 @@ run-name: Build & Push Image to ACR ${{ github.head_ref }} - ${{ github.run_id }
 
 
 jobs:
-  build:
+  build-within-azr:
     name: Build and push the image to Azure
     runs-on: ubuntu-latest
 
     steps:
-    - name: Set the label in the environment varialble
-      run: echo "LABEL=${{ github.sha }}" >> .env
-    - name: Build the container directly in the registry
-      uses: Azure/acr-build@v1
-      with:
-        # Service Principal with Contributor role on the ACR
-        service_principal: ${{ secrets.AZURE_SERVICE_PRINCIPAL_GUID }}
-        # Service Principal password
-        service_principal_password: ${{ secrets.AZURE_SERVICE_PRINCIPAL_SECRET }}
-        # Azure Container Registry tenant
-        tenant: ${{ secrets.AZURE_TENANT_ID }}
-        # The name of the ACR, minus the .azurecr.io
-        registry: restoringpride
-        # Repository to use
-        repository: restoringpride
-        # Github access token for private repositories
-        git_access_token: ${{ secrets.GITHUB_TOKEN }}
-        # Docker image name
-        # image: restoringpride # optional
-        # Docker image tag, default to the commit SHA
-        tag: ${{ github.sha }} # optional
-        # Branch to build from, defaults to master
-        branch: main # optional
-        # The folder in the Github repo that holds the source
-        folder: .
-        # The location of the Dockerfile; defaults to ./Dockerfile
-        dockerfile: ./Dockerfile # optional
-        # JSON specifying key=value pairs as as Docker build arguments
+      - name: Set the correct environemnt variables and the cottrft Dockerfile
+        run: mv docker-compose-production.yml docker-compose-production.yml
+
+      - name: Set the correct Dockerfile
+        run: mv Dockerfile.produdcrion Dockerfile
+
+      - name: Set the label in the environment varialble
+        run: echo "LABEL=${{ github.sha }}" >> .env
+      
+      - name: Build the container directly in the registry
+        uses: Azure/acr-build@v1
+        with:
+          # Service Principal with Contributor role on the ACR
+          service_principal: ${{ secrets.AZURE_SERVICE_PRINCIPAL_GUID }}
+          # Service Principal password
+          service_principal_password: ${{ secrets.AZURE_SERVICE_PRINCIPAL_SECRET }}
+          # Azure Container Registry tenant
+          tenant: ${{ secrets.AZURE_TENANT_ID }}
+          # The name of the ACR, minus the .azurecr.io
+          registry: restoringpride
+          # Repository to use
+          repository: restoringpride
+          # Github access token for private repositories
+          git_access_token: ${{ secrets.GITHUB_TOKEN }}
+          # Docker image name
+          # image: restoringpride # optional
+          # Docker image tag, default to the commit SHA
+          tag: ${{ github.sha }} # optional
+          # Branch to build from, defaults to master
+          branch: main # optional
+          # The folder in the Github repo that holds the source
+          folder: .
+          # The location of the Dockerfile; defaults to ./Dockerfile
+          dockerfile: ./Dockerfile # optional
+      # JSON specifying key=value pairs as as Docker build arguments
 #        build_args: # optional    
-    
+  
 #      - name: Checkout the latest version of the repo
 #        uses: actions/checkout@v3
-        
       
+    
 
 #      - name: Docker Login
 #        uses: docker/login-action@v2.1.0
