--- a/.github/pull-the-repo-and-deploy-directly-within-ACR.yml
+++ b/.github/pull-the-repo-and-deploy-directly-within-ACR.yml
@@ -33,7 +33,7 @@ jobs:
           # Docker image tag, default to the commit SHA
           tag: ${{ github.sha }} # optional
           # Branch to build from, defaults to master
-          branch: main # optional
+          branch: deployment # optional
           # The folder in the Github repo that holds the source
           folder: .
           # The location of the Dockerfile; defaults to ./Dockerfile
