--- a/.github/workflows/move-and-populate-final-production-ready-files.yml
+++ b/.github/workflows/move-and-populate-final-production-ready-files.yml
@@ -1,30 +1,46 @@
-name: Move & Populate Final Production Files - ${{ github.run_id }}
+name: Move & Populate Final Production Files 
+run-name: Move & Populate Final Production Files (${{ github.run_id }})
 
 on:
-  workflow_dispatch
+  workflow_dispatch:
+  workflow_call:
 
+permissions:
+  actions: write
+  id-token: write
+  contents: read
+
+concurrency:
+  group: ${{ github.action_repository }}
+  cancel-in-progress: true
+  
 jobs:
+
+  move-and-populate-the-final-produvtion-files:
+    runs-on: ubuntu-latest
+
     steps:
-    
-    
-    
-      - run: mv docker-compose-production.yml docker-compose-production.yml \
-         mv Dockerfile.produdcrion Dockerfile \ 
-         echo "LABEL=${{ github.sha }}" >> .env
+    - name: Checkout
+      uses: actions/checkout@v3.4.0
+
+    - run: mv docker-compose-production.yml docker-compose.yml \
+       mv Dockerfile.produdcTion Dockerfile \
+       cat production.env >> .env
+       echo "LABEL=${{ github.sha }}" >> .env
          
-      - name: Push the changes to a "deployment" branch
-        uses: github-actions-x/commit@v2.9
-        with:
-          # Github Token with commit access
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          # Override branch to push to
-          push-branch: deployment
-          # Specify commit messafe
-          commit-message: For deployemnt only
-          # Force add files, useful for adding ignored files.
-          force-add: true
-          # Force push.
-          force-push: true
-          # Pull and rebase before commiting. Useful when using commit inside matrix.
-          email: committerbot@restoringpride.org 
-          name: Resroring Pride Commit Bot 
+    - name: Push the changes to a "deployment" branch
+      uses: github-actions-x/commit@v2.9
+      with:
+        # Github Token with commit access
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        # Override branch to push to
+        push-branch: deployment
+        # Specify commit messafe
+        commit-message: For deployemnt only
+        # Force add files, useful for adding ignored files.
+        force-add: true
+        # Force push.
+        force-push: true
+        # Pull and rebase before commiting. Useful when using commit inside matrix.
+        email: committerbot@restoringpride.org 
+        name: Resroring Pride Commit Bot 
