--- a/.github/workflows/deploy-the-image-to-the-web-app.yml
+++ b/.github/workflows/deploy-the-image-to-the-web-app.yml
@@ -4,7 +4,7 @@ on:
   - workflow_dispatch
 
 name: Deploy the image to the Web app
-run-name: Deploy the image to the Web app ${{ github.head_ref }} - ${{ github.run_id }} - ${{ github.sha }}
+run-name: Deploy the image to the Web app (%{{ github.run_id }})
 
 jobs:
   deploy-to-web-app:
@@ -17,10 +17,6 @@ jobs:
             --username "${{ secrets.AZURE_SERVICE_PRINCIPAL_URI }}" \
             --password "${{ secrets.AZURE_SERVICE_PRINCIPAL_SECRET }}" \
             --tenant "${{ secrets.AZURE_TENANT_DOMAIN }}"
-#        with:
-#          # Paste output of `az ad sp create-for-rbac` as value of secret variable: AZURE_CREDENTIALS
-#          creds: '{"clientId":"${{ secrets.AZURE_DEPLOYMENT_GUID }}","clientSecret":"${{ secrets.AZURE_DEPLOYMENT_SECRET }}","subscriptionId":"${{ secrets.AZURE_SUBSCRIPTION_ID }}","tenantId":"${{ secrets.AZURE_TENANT_ID }}"}'
-
 
       - name: Setup Docker Compose
         run: |
